WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73227
REGRESSION(
r101172
): It made fast/dom/clone-node-style.html assert
https://bugs.webkit.org/show_bug.cgi?id=73227
Summary
REGRESSION(r101172): It made fast/dom/clone-node-style.html assert
Zhenyao Mo
Reported
2011-11-28 10:25:28 PST
It's unclear when this started to happen. Dimitri, can you help triage?
Attachments
QtWebKit gdb backtrack
(12.80 KB, text/plain)
2011-11-29 08:29 PST
,
Csaba Osztrogonác
no flags
Details
Proposed patch
(5.06 KB, patch)
2011-11-29 10:11 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zhenyao Mo
Comment 1
2011-11-28 10:29:33 PST
Added the test to test_expectations.txt in
r101264
Csaba Osztrogonác
Comment 2
2011-11-29 07:22:15 PST
It is a regression caused by
r101172
. I got it with manual bisecting. Andreas, could you check it, please?
Andreas Kling
Comment 3
2011-11-29 07:25:17 PST
(In reply to
comment #2
)
> It is a regression caused by
r101172
. I got it with manual bisecting. > Andreas, could you check it, please?
On it! Suspect it's the same issue as
bug 73213
, great that it broke a test :)
Csaba Osztrogonác
Comment 4
2011-11-29 07:27:17 PST
Unfortunately it is a flakey crash. But you can easily reprodeuce with old-run-webkit-tests --debug fast/dom/clone-node-style.html --iterations 100
Csaba Osztrogonác
Comment 5
2011-11-29 08:29:08 PST
Created
attachment 116975
[details]
QtWebKit gdb backtrack I reproduced this bug inside GBD with the following method: $ gdb WebKitBuild/Debug/bin/DumpRenderTree (gdb) run - <ctrl+v> <ctrl+v> <ctrl+v> <ctrl+v> <ctrl+v> ... (fast/dom/clone-node-style.html was on my clipboard) The crash backtrace is attached.
Csaba Osztrogonác
Comment 6
2011-11-29 09:11:50 PST
I added this test to the Qt Skipped list:
http://trac.webkit.org/changeset/101389
Please unskip it with the proper fix. Thanks in advance.
Andreas Kling
Comment 7
2011-11-29 10:09:08 PST
***
Bug 73213
has been marked as a duplicate of this bug. ***
Andreas Kling
Comment 8
2011-11-29 10:11:00 PST
Created
attachment 116992
[details]
Proposed patch
Dan Beam
Comment 9
2011-11-29 21:24:18 PST
bug 73392
may just be a straight dupe of this, but let's just make it block it for now (the proposed patch fixed the issue we're having in Chromium, btw).
Antti Koivisto
Comment 10
2011-11-30 04:56:55 PST
Comment on
attachment 116992
[details]
Proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=116992&action=review
r=me, with comments
> Source/WebCore/css/CSSMutableStyleDeclaration.h:-79 > - CSSMutableStyleDeclaration& operator=(const CSSMutableStyleDeclaration&);
You probably want to hide this.
> Source/WebCore/css/CSSMutableStyleDeclaration.h:80 > + void copyPropertiesAndStrictnessFrom(const CSSMutableStyleDeclaration&);
As discussed, it might be clearer to just have copyProperties() and use the existing accessors for transfering the strictness.
Andreas Kling
Comment 11
2011-11-30 05:14:04 PST
Comment on
attachment 116992
[details]
Proposed patch As discussed with Antti, I'm cq+ing this as is so we get rid of the regression. I'm currently in transit and will make a follow-up patch with the requested adjustments later today.
WebKit Review Bot
Comment 12
2011-11-30 06:07:45 PST
Comment on
attachment 116992
[details]
Proposed patch Clearing flags on attachment: 116992 Committed
r101502
: <
http://trac.webkit.org/changeset/101502
>
WebKit Review Bot
Comment 13
2011-11-30 06:07:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug