REGRESSION(r101172): It made fast/dom/clone-node-style.html assert. <http://webkit.org/b/73227>

Reviewed by Antti Koivisto.

Source/WebCore:

r101172 inadvertently introduced a default assignment operator for CSSElementStyleDeclaration
which caused StyledElement::copyNonAttributeProperties() to associate the element's inline
style declaration with the element being cloned.

Replace CSSMutableStyleDeclaration::operator= by copyPropertiesAndStrictnessFrom()
that matches the old behavior.

* css/CSSMutableStyleDeclaration.cpp:
(WebCore::CSSMutableStyleDeclaration::copyPropertiesAndStrictnessFrom):
* css/CSSMutableStyleDeclaration.h:
* dom/StyledElement.cpp:
(WebCore::StyledElement::copyNonAttributeProperties):

LayoutTests:

Unskip fast/dom/clone-node-style.html.

* platform/chromium/test_expectations.txt:
* platform/qt/Skipped:


Canonical link: https://commits.webkit.org/89983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101502 268f45cc-cd09-0410-ab3c-d52691b4dbfc